<resources>
    <string name="app_name">Afazeres</string>
    <string name="task_title">Title</string>
    <string name="task_category">Category</string>

    <string name="save">To salve</string>

    <string name="accessibility_add">Add Task</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="no_notes">You don\'t have tasks</string>
    <string name="total_notes">%s incomplete, %s completed</string>
    <string name="channelId" translatable="false">afazeres_channel</string>
    <string name="channelName" translatable="false">Afazeres</string>
    <string name="task_notification_channel_description" translatable="false">Task Reminder</string>
    <string name="task_form">Add Task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="category_personal">Personal</string>
    <string name="category_study">Study</string>
    <string name="category_work">Work</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="one_hour_before">%s hour before</string>
    <string name="thirty_min_before">%s min before</string>
    <string name="fifty_min_before">%s min before</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="remindMe_dialog_positiveBtn">Remind me</string>
    <string name="one_day_before">%s day before</string>
    <string name="one_day_from_now">%s day from now</string>
    <string name="one_hour_from_now">%s hour from now</string>
    <string name="thirty_min_from_now">%s min from now</string>
    <string name="register_button">To Register</string>
    <string name="signup_repeat_password_hint">Repeat Password</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_email_hint">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="signup_name_hint">Name</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="app_icon">App Icon</string>
    <string name="password_hint">Password</string>
    <string name="login_hint" translatable="false">Login</string>

</resources>