<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.rodcollab.afazeres.auth.login.LoginViewModel">
        </variable>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_brand"
                    android:layout_width="114dp"
                    android:layout_height="114dp"
                    android:src="@drawable/ic_afazeresapp_removebg_preview"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/app_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </ImageView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_email"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:hint="@string/signup_email_hint"
                    android:nextFocusDown="@+id/editText_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_brand">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_password"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:hint="@string/password_hint"
                    android:nextFocusDown="@+id/login_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInput_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInput_password"
                    android:text="@string/create_account">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:onClick="@{(view) -> viewModel.onLoginButtonClick()}"
                    android:text="@string/login_hint"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

    </ScrollView>


</layout>