<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".collections.ui.TaskListFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRecyclerViewCompleted"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="78dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/completed"
                tools:listitem="@layout/task_item_completed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/completed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/completed"
                android:textSize="18sp"
                app:fontFamily="@font/inter_bold"
                app:layout_constraintBottom_toTopOf="@id/taskRecyclerViewCompleted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taskRecyclerView">

            </com.google.android.material.textview.MaterialTextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRecyclerView"
                android:layout_width="0dp"
                android:layout_height="232dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@id/completed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/incomplete"
                tools:listitem="@layout/task_item" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/incomplete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/incomplete"
                android:textSize="18sp"
                app:fontFamily="@font/inter_bold"
                app:layout_constraintBottom_toTopOf="@id/taskRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/header_title">

            </com.google.android.material.textview.MaterialTextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_title"
                android:layout_width="343dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/current_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="#292B35"
                    android:textSize="32sp"
                    app:drawableEndCompat="@drawable/ic_dropdown"
                    app:fontFamily="@font/inter_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp"
                    tools:text="March 9, 2020" />

                <View
                    android:id="@+id/view"
                    android:layout_width="343dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0.1"
                    android:background="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/current_date" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="18dp"
                    android:textSize="14sp"
                    app:fontFamily="@font/inter_semibold"
                    app:layout_constraintBottom_toTopOf="@id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/current_date"
                    app:layout_constraintTop_toBottomOf="@id/current_date"
                    app:layout_constraintVertical_bias="0.615"
                    tools:text="5 incomplete, 5 completed" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:contentDescription="@string/accessibility_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>





